New figures, License

--- a/notebooks/damage-function.ipynb
+++ b/notebooks/damage-function.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de74beab",
+   "id": "e138ec0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,14 @@
     "from scipy.stats import norm\n",
     "from scipy.optimize import minimize\n",
     "\n",
+    "DATADIR = \"/home/erlend/data/portugal-rerun\"\n",
+    "SRCDIR = \"/home/erlend/github/gp-flood-damage-aggregator\"\n",
+    "# Set environment variable DATADIR\n",
+    "%env DATADIR $DATADIR\n",
+    "\n",
     "#Local import (change working directory), set to project src dir.\n",
-    "os.chdir(\"/home/ebr/projects/safeway-20180724/calculations/portugal-rerun-src\")\n",
+    "os.chdir(SRCDIR)\n",
+    "os.getcwd()\n",
     "\n",
     "from betapert import pert, plot_damage, check_stats\n",
     "from config import DAMAGE_ROAD_STATIC, DAMAGE_ROAD_DYNAMIC\n",
@@ -55,7 +61,7 @@
    "outputs": [],
    "source": [
     "# open features.tif for each scenario to get an overview of the raster values.\n",
-    "feature_file = os.path.join(\"/home/ebr/data/20180724/portugal-rerun\", \"features.tif\")"
+    "feature_file = os.path.join(DATADIR, \"floodmaps/merged_floodmaps\", \"features.tif\")"
    ]
   },
   {
@@ -198,6 +204,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "45e9b450",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a nicer plot of the distributions for article.\n",
+    "\n",
+    "import seaborn as sns\n",
+    "from betapert import pert\n",
+    "sns.set(font_scale=1.2)\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "\n",
+    "data = []\n",
+    "for nr, (key, (a, b, c)) in enumerate(DAMAGE_ROAD_DYNAMIC.items()):\n",
+    "    data.extend([(key, v) for v in pert(a, b, c, 500000)])\n",
+    "\n",
+    "sampled_damage_df = pd.DataFrame(data, columns=[\"Category\", \"Damage\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7ed26ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.displot(\n",
+    "    sampled_damage_df, \n",
+    "    x=\"Damage\", \n",
+    "    hue=\"Category\", \n",
+    "    kind=\"kde\", \n",
+    "    fill=True, \n",
+    "    bw_adjust= 1.5, \n",
+    "    #aspect=1.8, \n",
+    "    gridsize=200, \n",
+    "    legend=False\n",
+    ")\n",
+    "ax.set(xlim=(0, 1.))\n",
+    "plt.legend(labels=[\"$2 < h$\",\"$0.5 < h < 2$\", \"$h < 0.5$\"])\n",
+    "plt.savefig(\"notebooks/figures/sns_beta_dist.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e1320e7d",
    "metadata": {},
    "outputs": [],
@@ -268,11 +318,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e4086f6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "46019c5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"damage\"] = df.apply(lambda row: float(pert(*get_pert_parameters(row[\"depth\"], row[\"velocity\"]),1)), axis=1)"
+    "df[\"damage\"] = df.apply(lambda row: float(pert(*get_pert_parameters(row[\"depth\"], row[\"velocity\"]),1)[0]), axis=1)"
    ]
   },
   {
@@ -357,6 +417,16 @@
     "df[\"velocity_sq\"] = df.apply(lambda row: row[\"velocity\"]**2, axis=1)\n",
     "df[\"moment\"] = df.apply(lambda row: row[\"velocity\"]*row[\"depth\"], axis=1)\n",
     "df[\"const\"] = df.apply(lambda row: 1., axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8994e680",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dtypes"
    ]
   },
   {
@@ -454,21 +524,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c30a254",
+   "id": "9ab6025c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Histogram.\n",
-    "plt.hist(df[\"eps\"], density=True, bins=200)\n",
+    "# Make nicer figure for article.\n",
+    "\n",
+    "sns.set(font_scale=1.8)\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "\n",
+    "ax = sns.histplot(df['eps'], kde=False, stat='density', bins=80)\n",
+    "ax.set(xlim=(-4.5, 4.5))\n",
+    "ax.set(xlabel='Residuals', ylabel='Density')\n",
     "\n",
     "# Plot the PDF.\n",
     "xmin, xmax = plt.xlim()\n",
-    "x = np.linspace(xmin, xmax, 100)\n",
+    "x_pdf = np.linspace(xmin, xmax, 100)\n",
+    "y_pdf = norm.pdf(x_pdf, df[\"eps\"].mean(), df[\"eps\"].std())\n",
+    "sns.lineplot(x=x_pdf,y=y_pdf, lw=2)\n",
     "\n",
-    "plt.plot(x, norm.pdf(x, df[\"eps\"].mean(), df[\"eps\"].std()))\n",
-    "\n",
-    "print(\"eps mean: {}, eps std:{}\".format(df[\"eps\"].mean(), df[\"eps\"].std()))\n",
-    "plt.savefig(\"notebooks/figures/eps-density.png\")"
+    "plt.savefig(\"notebooks/figures/sns-eps-density.png\")"
    ]
   },
   {
@@ -537,38 +612,92 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4a5ad97",
+   "id": "5c61f23a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(projection='3d')\n",
-    "ax.scatter(df[\"depth\"], df[\"velocity\"], df[\"d_hat\"], alpha=0.3)\n",
-    "ax.scatter(df[\"depth\"], df[\"velocity\"], df[\"damage\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae103b5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ax = df[0:10000].plot(kind=\"scatter\", x=\"velocity\", y=\"d_hat\", color=\"blue\", alpha=0.2, label=\"fitted\", logy=True)\n",
-    "fig = df[0:10000].plot(kind=\"scatter\", x=\"velocity\", y=\"damage\", color=\"orange\", alpha=0.2, ax=ax, label=\"thresholds\", logy=True).get_figure()\n",
-    "fig.savefig(\"notebooks/figures/fitted-thresholds-scatter-vel.png\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "baccc7c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ax = df[0:10000].plot(kind=\"scatter\", x=\"depth\", y=\"d_hat\", color=\"blue\", alpha=0.3, label=\"fitted\", logy=True)\n",
-    "fig = df[0:10000].plot(kind=\"scatter\", x=\"depth\", y=\"damage\", color=\"orange\", alpha=0.3, ax=ax, label=\"thresholds\", logy=True).get_figure()\n",
-    "fig.savefig(\"notebooks/figures/fitted-thresholds-scatter-depth.png\")"
+    "# Nicer figure, for publication.\n",
+    "\n",
+    "nr_of_samples=15000\n",
+    "sns.set(font_scale=1.3)\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 2, sharey=True)\n",
+    "threshold_size = 15\n",
+    "threshold_alpha = 0.5\n",
+    "blue = sns.color_palette()[0]\n",
+    "orange = sns.color_palette()[1]\n",
+    "\n",
+    "\n",
+    "df[0:nr_of_samples].plot(\n",
+    "    kind=\"scatter\",\n",
+    "    x=\"depth\", \n",
+    "    y=\"damage\", \n",
+    "    color=orange, \n",
+    "    alpha=threshold_alpha, \n",
+    "    ax=axs[0], \n",
+    "    label=\"thresholds\",\n",
+    "    marker='s',\n",
+    "    s=threshold_size,\n",
+    "    edgecolors='black',\n",
+    "    linewidth=0.4\n",
+    ")\n",
+    "df[0:nr_of_samples].plot(\n",
+    "    kind=\"scatter\",\n",
+    "    x=\"depth\", \n",
+    "    y=\"d_hat\", \n",
+    "    color=blue, \n",
+    "    alpha=0.4, \n",
+    "    label=\"fitted\", \n",
+    "    ax=axs[0],\n",
+    "    s=10,\n",
+    "    edgecolors='black',\n",
+    "    linewidth=0.3\n",
+    ")\n",
+    "\n",
+    "df[0:nr_of_samples].plot(\n",
+    "    kind=\"scatter\", \n",
+    "    x=\"velocity\", \n",
+    "    y=\"damage\", \n",
+    "    color=orange, \n",
+    "    alpha=threshold_alpha, \n",
+    "    ax=axs[1], \n",
+    "    s=threshold_size,\n",
+    "    marker='s',\n",
+    "    label=\"thresholds\",\n",
+    "    edgecolors='black',\n",
+    "    linewidth=0.3\n",
+    ")\n",
+    "df[0:nr_of_samples].plot(\n",
+    "    kind=\"scatter\", \n",
+    "    x=\"velocity\", \n",
+    "    y=\"d_hat\", \n",
+    "    color=blue, \n",
+    "    alpha=0.4, \n",
+    "    label=\"fitted\", \n",
+    "    s=10,\n",
+    "    ax=axs[1],\n",
+    "    edgecolors='black',\n",
+    "    linewidth=0.4\n",
+    ")\n",
+    "\n",
+    "axs[0].set_xlabel(\"Depth [m]\")\n",
+    "axs[0].set_ylabel(\"Damage\")\n",
+    "axs[1].set_xlabel(\"Velocity [m/s]\")\n",
+    "for ax in axs:\n",
+    "    ax.get_legend().remove()\n",
+    "    ax.set_ylim(1e-4,1)\n",
+    "    ax.set_yscale(\"log\")\n",
+    "\n",
+    "fig.legend(\n",
+    "    labels=[\"thresholds\", \"fitted\"], \n",
+    "    loc=\"upper center\", \n",
+    "    bbox_to_anchor=(0.99, 0.87),\n",
+    "    fancybox=False, \n",
+    "    shadow=False, \n",
+    "    ncol=1)\n",
+    "\n",
+    "fig.savefig(\"notebooks/figures/fitted-thresholds-scatter-vel-depth.png\", bbox_inches = 'tight')"
    ]
   },
   {
@@ -623,23 +752,162 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sns.set(font_scale=1.3)\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "\n",
+    "nr_of_samples=15000\n",
     "d_sample = \"d_sample_1.0\"\n",
-    "ax = df[0:10000].plot(kind=\"scatter\", x=\"depth\", y=d_sample, color=\"blue\", alpha=0.2, label=\"sampled\", logy=True)\n",
-    "fig = df[0:10000].plot(kind=\"scatter\", x=\"depth\", y=\"damage\", color=\"orange\", alpha=0.2, ax=ax, label=\"thresholds\", logy=True).get_figure()\n",
-    "fig.savefig(\"notebooks/figures/sampled-thresholds-scatter-depth-{}.png\".format(d_sample))"
+    "\n",
+    "fig, axs = plt.subplots(1, 2, sharey=True)\n",
+    "threshold_size = 15\n",
+    "threshold_alpha = 0.5\n",
+    "blue = sns.color_palette()[0]\n",
+    "orange = sns.color_palette()[1]\n",
+    "\n",
+    "\n",
+    "df[0:nr_of_samples].plot(\n",
+    "    kind=\"scatter\",\n",
+    "    x=\"depth\", \n",
+    "    y=\"damage\", \n",
+    "    color=orange, \n",
+    "    alpha=threshold_alpha, \n",
+    "    ax=axs[0], \n",
+    "    label=\"thresholds\",\n",
+    "    marker='s',\n",
+    "    s=threshold_size,\n",
+    "    edgecolors='black',\n",
+    "    linewidth=0.4\n",
+    ")\n",
+    "df[0:nr_of_samples].plot(\n",
+    "    kind=\"scatter\",\n",
+    "    x=\"depth\", \n",
+    "    y=d_sample, \n",
+    "    color=blue, \n",
+    "    alpha=0.4, \n",
+    "    label=\"sampled\", \n",
+    "    ax=axs[0],\n",
+    "    s=10,\n",
+    "    edgecolors='black',\n",
+    "    linewidth=0.3\n",
+    ")\n",
+    "\n",
+    "\n",
+    "df[0:nr_of_samples].plot(\n",
+    "    kind=\"scatter\", \n",
+    "    x=\"velocity\", \n",
+    "    y=\"damage\", \n",
+    "    color=orange, \n",
+    "    alpha=threshold_alpha, \n",
+    "    ax=axs[1], \n",
+    "    s=threshold_size,\n",
+    "    marker='s',\n",
+    "    label=\"thresholds\",\n",
+    "    edgecolors='black',\n",
+    "    linewidth=0.3\n",
+    ")\n",
+    "df[0:nr_of_samples].plot(\n",
+    "    kind=\"scatter\", \n",
+    "    x=\"velocity\", \n",
+    "    y=d_sample, \n",
+    "    color=blue, \n",
+    "    alpha=0.4, \n",
+    "    label=\"sampled\", \n",
+    "    s=10,\n",
+    "    ax=axs[1],\n",
+    "    edgecolors='black',\n",
+    "    linewidth=0.4\n",
+    ")\n",
+    "\n",
+    "axs[0].set_xlabel(\"Depth [m]\")\n",
+    "axs[0].set_ylabel(\"Damage\")\n",
+    "axs[1].set_xlabel(\"Velocity [m/s]\")\n",
+    "for ax in axs:\n",
+    "    ax.get_legend().remove()\n",
+    "    ax.set_ylim(1e-4,1)\n",
+    "    ax.set_yscale(\"log\")\n",
+    "\n",
+    "fig.legend(\n",
+    "    labels=[\"thresholds\", \"sampled\"], \n",
+    "    loc=\"upper center\", \n",
+    "    bbox_to_anchor=(0.99, 0.87),\n",
+    "    fancybox=False,\n",
+    "    shadow=False, \n",
+    "    ncol=1)\n",
+    "\n",
+    "fig.savefig(\"notebooks/figures/sampled-thresholds-scatter-vel-depth-{}.png\".format(d_sample), bbox_inches = 'tight')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff16badd",
+   "id": "3193b233",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d_sample = \"d_sample_1.0\"\n",
-    "ax = df[0:10000].plot(kind=\"scatter\", x=\"velocity\", y=d_sample, color=\"blue\", alpha=0.2, label=\"sampled\", logy=True)\n",
-    "fig = df[0:10000].plot(kind=\"scatter\", x=\"velocity\", y=\"damage\", color=\"orange\", alpha=0.2, ax=ax, label=\"thresholds\",logy=True).get_figure()\n",
-    "fig.savefig(\"notebooks/figures/sampled-thresholds-scatter-vel-{}.png\".format(d_sample))"
+    "# Alternative figure.\n",
+    "\n",
+    "import seaborn.objects as so\n",
+    "import matplotlib.colors as colors\n",
+    "#sns.set(font_scale=1.8)\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "\n",
+    "plot_data_df = df[0:100000]\n",
+    "fig, axs = plt.subplots(1, 3, sharey=True, sharex=True)\n",
+    "#p1 = so.Plot(plot_data_df, \"velocity\", \"depth\", ax=ax) \n",
+    "#p1.add(so.Dots(alpha=0.8), color = \"damage\")\n",
+    "norm = colors.LogNorm(1e-3,1)\n",
+    "\n",
+    "p1 = sns.scatterplot(\n",
+    "    data=plot_data_df, \n",
+    "    y=\"velocity\", \n",
+    "    x=\"depth\", \n",
+    "    hue=\"damage\",\n",
+    "    hue_norm = norm,\n",
+    "    ax=axs[0],\n",
+    "    \n",
+    ")\n",
+    "\n",
+    "p2 = sns.scatterplot(\n",
+    "    data=plot_data_df, \n",
+    "    y=\"velocity\", \n",
+    "    x=\"depth\", \n",
+    "    hue=\"d_hat\", \n",
+    "    hue_norm = norm,\n",
+    "    ax=axs[1]\n",
+    ")\n",
+    "\n",
+    "p2 = sns.scatterplot(\n",
+    "    data=plot_data_df, \n",
+    "    y=\"velocity\", \n",
+    "    x=\"depth\", \n",
+    "    hue=\"d_sample_1.0\",\n",
+    "    hue_norm = norm,\n",
+    "    ax=axs[2]\n",
+    ")\n",
+    "# Remove legends\n",
+    "for ax in axs:\n",
+    "    ax.get_legend().remove()\n",
+    "    ax.set_xlim(0,6)\n",
+    "    ax.set_ylim(1e-2,6)\n",
+    "    ax.set_yscale(\"log\")\n",
+    "\n",
+    "# Add colorbar\n",
+    "\n",
+    "#Normalize(0,1)\n",
+    "cmap = sns.cubehelix_palette(light=1, as_cmap=True)\n",
+    "sm = plt.cm.ScalarMappable(cmap=cmap, norm=norm)\n",
+    "sm.set_array([])\n",
+    "\n",
+    "#Add colorbar\n",
+    "left = axs[2].get_position().x1+0.05\n",
+    "bottom = axs[2].get_position().y0\n",
+    "width = 0.05\n",
+    "height = axs[2].get_position().height\n",
+    "\n",
+    "cax = fig.add_axes([left,bottom,width,height])\n",
+    "fig.colorbar(sm, cax=cax, label=\"Damage\")\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -708,7 +976,7 @@
    "id": "716e7ab8",
    "metadata": {},
    "source": [
-    "As one would expect, continuous predictions appears more smeared out in these cathgories. However, one should keep in mid taht we have been picking cathegories conforming to the ones used for sampling. The continuous model is supposed to fit also those not conforming to the ones we have sampled from. Let us see what happens when we add noise to predicted values."
+    "As one would expect, continuous predictions appears more smeared out in these cathgories. However, one should keep in mind that we have been picking cathegories conforming to the ones used for sampling. The continuous model is supposed to fit also those not conforming to the ones we have sampled from. Let us see what happens when we add noise to predicted values."
    ]
   },
   {
@@ -1096,9 +1364,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flood-dam-portugal",
+   "display_name": "gp-damage-aggregator",
    "language": "python",
-   "name": "flood-dam-portugal"
+   "name": "gp-damage-aggregator"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1110,7 +1378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
