--- a/notebooks/estimate-damage.ipynb
+++ b/notebooks/estimate-damage.ipynb
@@ -65,6 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7981e6b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,6 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3b6626c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,6 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "033eaa74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gp-damage-aggregator",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
